# StarFighter

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md
StarFighter/: CmakeLists.txt
StarFighter/include/framework/: Application.h
StarFighter/src/: main.cpp
StarFighter/src/framework/: Application.cpp
StarFighterEngine/: CMakeLists.txt  CmakeLists.txt
StarFighterEngine/include/: main.h
StarFighterEngine/include/VFX/: Particle.h
StarFighterEngine/include/framework/: Actor.h  Application.h  AssetManager.h  Core.h  Delegate.h  MathUtility.h  Object.h  PhysicsSystem.h  TimerManager.h  World.h
StarFighterEngine/include/gameplay/: GameStage.h  WaitStage.h
StarFighterEngine/src/: main.cpp
StarFighterEngine/src/VFX/: Particle.cpp
StarFighterEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  MathUtility.cpp  Object.cpp  PhysicsSystem.cpp  TimerManager.cpp  World.cpp
StarFighterEngine/src/gameplay/: GameStage.cpp  WaitStage.cpp
StarFighterGame/: CMakeLists.txt  CmakeLists.txt
StarFighterGame/include/: config.h
StarFighterGame/include/VFX/: Explosion.h
StarFighterGame/include/enemy/: EnemySpaceship.h  TwinBlade.h  TwinBladeStage.h  Vanguard.h  VanguardStage.h
StarFighterGame/include/gameFramework/: GameApplication.h
StarFighterGame/include/gameplay/: HealthComponent.h
StarFighterGame/include/level/: GameLevelOne.h
StarFighterGame/include/player/: PlayerSpaceship.h
StarFighterGame/include/spaceship/: Spaceship.h
StarFighterGame/include/weapon/: Bullet.h  BulletShooter.h  Shooter.h
StarFighterGame/src/VFX/: Explosion.cpp
StarFighterGame/src/enemy/: EnemySpaceship.cpp  TwinBlade.cpp  TwinBladeStage.cpp  Vanguard.cpp  VanguardStage.cpp
StarFighterGame/src/gameFramework/: GameApplication.cpp
StarFighterGame/src/gameplay/: HealthComponent.cpp
StarFighterGame/src/level/: GameLevelOne.cpp
StarFighterGame/src/player/: PlayerSpaceship.cpp
StarFighterGame/src/spaceship/: Spaceship.cpp
StarFighterGame/src/weapon/: Bullet.cpp  BulletShooter.cpp  Shooter.cpp
